completed aboutme section

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
     text-decoration: none;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,7 +44,7 @@ nav .right a {
     margin: 0 10px;
 }
 
-nav .right a:first-child{
+nav .right a:first-child {
     color: var(--background-color);
     background-color: var(--text-color);
     padding: 5px 15px;
@@ -52,16 +52,7 @@ nav .right a:first-child{
 }
 
 nav .right a span {
-    margin-left: 5px; 
-}
-
-img {
-    border: 1px solid #ffffff;
-    border-radius: 4px;
-    padding: 5px;
-    width: 350px;     
-    height: 450px;
-    clip-path: circle(30%);
+    margin-left: 5px;
 }
 
 .aboutme {
@@ -70,22 +61,23 @@ img {
     align-items: center;
     padding: 0 50px;
     margin: 70px 0;
+    margin-bottom: 100px;
     gap: 50px;
 }
 
 .aboutme .text {
     flex: 5;
-} 
-
-.aboutme .text h2 {
-    font-size: 45;
 }
 
-.aboutme .text .link {
+.aboutme .text h2 {
+    font-size: 45px;
+}
+
+.aboutme .text .links {
     margin-top: 25px;
 }
 
-.aboutme .text .link a {
+.aboutme .text .links a {
     display: inline-block;
     padding: 5px 10px;
     border: 2px solid var(--link-color);
@@ -94,6 +86,16 @@ img {
 }
 
 .aboutme .profile {
+    justify-content: right;
     flex: 2;
 }
 
+.aboutme .profile img {
+    width: 350px;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #ffffff;
+    border-radius: 80%;
+    padding: 5px;
+    display: block;
+}
