--- a/style.css
+++ b/style.css
@@ -117,9 +117,9 @@ nav .right a span {
     margin-bottom: 20px;
 }
 
-.skills .cells{
+.skills .cells {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     flex-wrap: wrap;
 
 }
@@ -131,7 +131,7 @@ nav .right a span {
     width: 100px;
     height: 100px;
     margin: 10px;
-    gap:  10px;
+    gap: 10px;
 }
 
 .skills .cells .cell img {
@@ -176,7 +176,7 @@ nav .right a span {
 
 footer {
     text-align: center;
-    padding: 20px;   
+    padding: 20px;
 }
 
 .back-to-top {
@@ -198,7 +198,8 @@ footer {
 
     nav .right a {
         font-size: 22px;
-
+        color: var(--text-color);
+        margin: 0 10px;
     }
 
     nav .right a:first-child {
@@ -214,11 +215,28 @@ footer {
 
     .aboutme {
         padding: 0 20px;
+        flex-direction: column;
+        text-align: center;
+
     }
 
     .aboutme .text h2 {
         font-size: 30px;
     }
+
+    .aboutme .profile {
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .aboutme .links {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+
 
     .skills {
         padding: 0 20px;
@@ -236,6 +254,7 @@ footer {
 
     .edu .edudetails {
         flex-direction: column;
+        align-items: center;
     }
 
 }
